--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "usepopcorn",
   "version": "0.1.0",
-  "homepage": "https://Judith-20.github.io/usePopcorn",
+  "homepage": "https://Judith-20.github.io/usepopcorn12",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
